Endpoint GET /modulos-matriculados
